; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/notify/inotify/extr_inotify_user.c_inotify_mask_to_arg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/notify/inotify/extr_inotify_user.c_inotify_mask_to_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IN_ALL_EVENTS = common dso_local global i32 0, align 4
@IN_ISDIR = common dso_local global i32 0, align 4
@IN_UNMOUNT = common dso_local global i32 0, align 4
@IN_IGNORED = common dso_local global i32 0, align 4
@IN_Q_OVERFLOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @inotify_mask_to_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inotify_mask_to_arg(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @IN_ALL_EVENTS, align 4
  %5 = load i32, i32* @IN_ISDIR, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @IN_UNMOUNT, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @IN_IGNORED, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @IN_Q_OVERFLOW, align 4
  %12 = or i32 %10, %11
  %13 = and i32 %3, %12
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
